# document_finder

./: Dockerfile  README.md  docker-compose.yml  docs.json  pyproject.toml
app/: __main__.py  schemas.py  utils.py
app/api/v1/: __init__.py  handlers.py
app/db/: __init__.py  db.py  models.py  storage.py
app/es/: __init__.py  queries.py  tools.py
app/utils/: __init__.py  es_and_db_integrate_utils.py  es_utils.py  time_utils.py
init_data/: __main__.py
