[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ruslan <ruslanzakharov3008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.8"
asyncpg = "^0.27.0"
elasticsearch = "^8.6.2"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
